prepare to open the source code